fix spacing for benefits

--- a/docs/assets/styles/docs.css
+++ b/docs/assets/styles/docs.css
@@ -621,8 +621,3 @@ code {
     display: block;
     margin-right: 10px;
 }
-
-#articles-with-highlight {
-    max-width: 1100px;
-    margin: 0 auto;
-}
